Sat Apr 16 17:01:16 2005  Kouhei Sutou  <kou@cozmixng.org>

	* sample/rss/tdiary_plugin/rss-recent.rb (rss_recent_cache_rss):
	  use the first date information of items as site date information
	  if channel doesn't have date information.

Sat Apr 16 15:27:03 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_PROG_INSTALL): not add -p option to INSTALL.
	  files need timestamps to be kept are only ar-archive on a few
	  platforms, and be installed by instruby.rb but not INSTALL.
	  fixed: [ruby-core:04721]

	* mkconfig.rb: purge autoconf value variables.

Sat Apr 16 10:36:01 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: quick hack... prepend DESTDIR.
	  still have restriction on DESTDIR ("", "/", "e:")

Sat Apr 16 03:59:42 2005  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/extconf.rb: check for OPENSSL_cleanse.

	* ext/openssl/openssl_missing.h: ditto.

Thu Apr 14 19:18:30 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (remove_file): ignore exceptions caused by
	  chmod.

	* lib/fileutils.rb (remove_dir): try to get rights to rmdir.
	  [ruby-Bugs:1502] (2 items backportted from HEAD, rev 1.53-54)

Thu Apr 14 16:57:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bcc32/Makefile.sub: failed to remove debug information files.
	  fixed: [ruby-dev:26034]

Wed Apr 13 23:40:21 2005  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::VERSION): 0.1.3 -> 0.1.4.

	* lib/rss/rss.rb (RSS::Element#converter): fixed converter
	  transmission bug.

Wed Apr 13 21:20:35 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in (mingw32): extract msvcr*.dll from objdump result.

Wed Apr 13 20:24:30 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (mingw32): use actual runtime DLL name as ruby DLL
	  name and default load path.

	* win32/Makefile.sub, win32/setup.mak: ditto.

Tue Apr 12 15:33:09 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
